Add unit tests and refactor code